--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,7 @@ body{
 
 .Stack{
   width: 50vw;
+  height: 10vw;
   background-color: #2c3335;
   border-radius: 16px;
   margin: 16vh auto auto auto;
@@ -56,7 +57,7 @@ body{
   border: 2px solid #F3D259;
   width: fit-content;
   padding: 8px;
-  margin: 16px 8px;
+  margin: 8px;
 }
 
 .Keyboard>input{
@@ -72,6 +73,7 @@ body{
 .Keyboard>input:focus{
   outline: none;
   border: 1px solid #F3D259;
+  background-color: #2c3335;
 }
 
 .Keyboard{
@@ -99,21 +101,34 @@ body{
   background-color: #2C3335;
 }
 
-.wrong-key, #f{
+.wrong-key, #F{
   background-color: #F3D259;
   color: #2C3335;
 }
 
-.key-pressed, #o{
+.key-pressed, #O{
   background-color: #68797D;
 }
 
 
 
 @media only screen and (max-width: 768px){
+
+  .Stack{
+    margin: 8vh auto auto auto;
+    width: 90vw;
+    height: 20vw;
+  }
+
+  .stack--words{
+    padding: 4px;
+    margin: 4px;
+  }
+
   .Keyboard{
     width: 80vw;
     padding: 16px;
+    margin: 32px auto auto auto;
   }
 
   .key{
